[gd_scene load_steps=2 format=3 uid="uid://futsal_main_menu_2d"]

[ext_resource type="Script" path="res://scripts/main_menu_2d.gd" id="1_main_menu"]

[node name="MainMenu2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_main_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.08, 0.14, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -32.0

[node name="Layout" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="Title" type="Label" parent="Margin/Layout"]
layout_mode = 2
text = "FUTSAL 3D"
theme_override_font_sizes/font_size = 48

[node name="Subtitle" type="Label" parent="Margin/Layout"]
layout_mode = 2
text = "Men√∫ principal"
theme_override_font_sizes/font_size = 26

[node name="Buttons" type="VBoxContainer" parent="Margin/Layout"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayButton" type="Button" parent="Margin/Layout/Buttons"]
layout_mode = 2
text = "Jugar partido"

[node name="TemplateButton" type="Button" parent="Margin/Layout/Buttons"]
layout_mode = 2
text = "Creador de plantilla"

[node name="QuitButton" type="Button" parent="Margin/Layout/Buttons"]
layout_mode = 2
text = "Salir"

[node name="StatusLabel" type="Label" parent="Margin/Layout"]
layout_mode = 2
text = "Estado"
theme_override_font_sizes/font_size = 18
